samples/_failures_safe/1761718978_26bca5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_527d7ccc.c: In function ‘display_recent_entries’:
./samples/SAFE/__tmp_527d7ccc.c:152:16: error: missing terminating " character
  152 |         printf("[%s
      |                ^~~~
./samples/SAFE/__tmp_527d7ccc.c:152:9: error: expected expression at end of input
  152 |         printf("[%s
      |         ^~~~~~
./samples/SAFE/__tmp_527d7ccc.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_527d7ccc.c:152:9: error: expected declaration or statement at end of input
